--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/tozny/js-id-tools#readme",
   "devDependencies": {
-    "@toznysecure/sdk": "file:../js-sdk",
+    "@toznysecure/sdk": "^1.1.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
